--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <span
                 >Hi, I'm Sachi! I'm a computer engineer who finds joy in the world of art and expressing my creativity
                 through designing websites. When I'm not immersed in coding, you can find me admiring the cuteness of
-                ducks, a constant source of inspiration that fuels my creative endeavors. - ChatGPT</span
+                ducks, a constant source of inspiration that fuels my creative endeavors.</span
               >
             </div>
             <div class="gap-3 flex mt-8">
