--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
           <div class="flex flex-col ml-10 lg:ml-28 lg:w-1/3">
             <div class="font-semibold text-xl lg:text-4xl tracking-[0.5rem] w-max">Experience</div>
             <div
-              class="flex flex-col border-l-4 border-neutral-400 mt-8 px-8 w-5/6 lg:w-full transition-all hover:translate-x-2"
+              class="flex flex-col border-l-4 border-neutral-400 mt-8 px-8 w-5/6 lg:w-full text-sm transition-all hover:translate-x-2"
             >
               <span class="font-semibold">PART-TIME QUALITY ASSURANCE ENGINEER</span>
               <span>NEXBRDIGE TECHNOLOGIES INC. </span>
               <span>OCTOBER 2022 - APRIL 2023</span>
             </div>
             <div
-              class="flex flex-col border-l-4 border-neutral-400 mt-8 px-8 w-5/6 lg:w-full transition-all hover:translate-x-2"
+              class="flex flex-col border-l-4 border-neutral-400 mt-8 px-8 w-5/6 lg:w-full text-sm transition-all hover:translate-x-2"
             >
               <span class="font-semibold">FRONT-END WEB DEVELOPER INTERN</span>
               <span
@@ -109,7 +109,7 @@
           <div class="flex flex-col ml-10 lg:ml-28 lg:w-1/3">
             <div class="font-semibold mt-8 lg:mt-0 text-xl lg:text-4xl tracking-[0.5rem] w-max">Education</div>
             <div
-              class="flex flex-col border-l-4 border-neutral-400 mt-8 px-8 w-5/6 lg:w-full transition-all hover:translate-x-2"
+              class="flex flex-col border-l-4 border-neutral-400 mt-8 px-8 w-5/6 lg:w-full text-sm transition-all hover:translate-x-2"
             >
               <span class="font-semibold">BACHELOR OF SCIENCE IN COMPUTER ENGINEERING</span>
               <span>BULACAN STATE UNIVERSITY | 2019 -2023</span>
@@ -142,13 +142,12 @@
       class="flex fixed bg-neutral-100 h-screen min-w-full -translate-x-full transition-all ease-out duration-300"
     >
       <button
-        id="closeBtn"
-        class="hidden lg:block border-r-2 border-neutral-400 flex h-screen items-center justify-center w-40 transition-all hover:bg-neutral-200"
+        class="closeBtn hidden lg:block border-r-2 border-neutral-400 flex h-screen items-center justify-center w-40 transition-all hover:bg-neutral-200"
       >
         <i class="fa-solid fa-arrow-left text-3xl"></i>
       </button>
       <button
-        class="close Btn flex lg:hidden bg-neutral-800 fixed h-10 items-center justify-center m-4 ring-neutral-300 rounded-full transition-all w-10 hover:ring-4"
+        class="closeBtn flex lg:hidden bg-neutral-800 fixed h-10 items-center justify-center m-4 ring-neutral-300 rounded-full transition-all w-10 hover:ring-4"
       >
         <i class="fa-solid fa-arrow-left text-neutral-100 text-xl"></i>
       </button>
